--- a/index.html
+++ b/index.html
@@ -62,28 +62,28 @@
             <div class="member-container">
 
               <div class="member">
-                <img src="images/th (2).jpg" alt="">
+                <img src="image1.jpg" alt="">
                 <p>Dog Trainer</p>
                 <h2>Annette Black</h2>
                 <p>&spades;</p>
               </div>
   
               <div class="member">
-                <img src="images/th.jpg" alt="">
+                <img src="image5.jpg" alt="">
                 <p>Medical Assistant</p>
                 <h2>Wade Warren</h2>
                 <p>&clubs;</p>
               </div>
   
               <div class="member">
-                <img src="images/wp7479519.jpg" alt="">
+                <img src="image3.jpg" alt="">
                 <p>President of sales</p>
                 <h2>Savannah Nguyen</h2>
                 <p>&hearts;</p>
               </div>
   
               <div class="member">
-                <img src="images/man-person-portrait-professional-profession-hairstyle-face-glasses-head-eyewear-portrait-photography-vision-care-passport-photograph-1238378.jpg" alt="">
+                <img src="image4.jpg" alt="">
                 <p>Nursing Assistant</p>
                 <h2>Jenny Wilson</h2>
                 <p>&diamondsuit;</p>
